--- a/index.css
+++ b/index.css
@@ -98,11 +98,14 @@ div{
     font-weight: bold;
     width: 250px;
     height: 250px;
+    transition: transform .2s;
     
 
 }
 .card:hover{
     background-color: rgb(13, 2, 2);
+    border-bottom: 2px solid purple;
+    transform: scale(1.05)
 }
 footer{
     color: white;
@@ -113,14 +116,25 @@ footer{
 }
 /* mobile responsive */
 
-@media only screen and (min-width: 200px) and (max-width: 767px) {
+@media only screen and (min-width: 200px) and (max-width: 800px) {
     .nav{
         width: 100%;
-        flex-basis: 100%;
+        width: auto;
     }
     h1{
         width: 100%;
-        font-size: 70px;
+        font-size: 30px;
+        margin: auto;
+        margin-top: 30px;
+        margin-left: 50px;
+
+    } 
+    h3{
+        width: 100%;
+        font-size: 20px;
+    }
+    button{
+        font-size: 12px;
     }
     .container {
       width: 100%;
@@ -128,8 +142,22 @@ footer{
       justify-content: center;
     }
     .card{
-        width: 100%;
+        margin: auto;
         
+    }
+    img{
+        width: 100%;
+        height: auto;
+    }
+
+    
+   
+    p{
+           margin-left: 50px;
+    }
+    h2{
+        margin-left: 40px;
+        font-size: 30px;
     }
   }
 
